Infra-Clinic/k8s-manifests/production/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: ptcc-development
  labels:
    app: minio
    project: "ProntDental"
    environment: "development"
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: api
  - port: 9001
    targetPort: 9001
    protocol: TCP
    name: console
  selector:
    app: minio
